# aws-cloud-controller

./: CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  aws.rs  config.rs  event.rs  logger.rs  main.rs  settings.rs  tui.rs  ui.rs
src/app/: actions.rs  handlers.rs  mod.rs  state.rs
src/aws/: mod.rs
src/event/: mod.rs
src/logger/: mod.rs
src/settings/: mod.rs
src/ui/: mod.rs  utils.rs
src/ui/components/: dialogs.rs  mod.rs  statusbar.rs  toast.rs
src/ui/screens/: about.rs  ec2.rs  home.rs  lambda.rs  logs.rs  mod.rs
