[package]
name = "aws-cloud-controller"
version = "0.2.2"
edition = "2021"
description = "A TUI application for managing AWS EC2 and Lambda resources"
authors = ["Saikiran"]
readme = "README.md"
repository = "https://github.com/SiRune-Etch/aws-cloud-controller"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full", "sync"] }

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.52"
aws-sdk-lambda = "1.42"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Time & Scheduling
chrono = { version = "0.4", features = ["serde"] }

# Audio Alerts
rodio = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System Info
whoami = "1.5"
dirs = "5.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

