[package]
name = "aws-cloud-controller"
version = "0.2.3"
edition = "2021"
description = "A TUI application for managing AWS EC2 and Lambda resources"
authors = ["Saikiran"]
readme = "README.md"
repository = "https://github.com/SiRune-Etch/aws-cloud-controller"

[dependencies]
# TUI Framework
ratatui = "0.30.0"
crossterm = "0.29.0"

# Async Runtime
tokio = { version = "1.49.0", features = ["full", "sync"] }

# AWS SDK
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.207.0"
aws-sdk-lambda = "1.115.0"

# Error Handling
anyhow = "1.0.101"
thiserror = "2.0.18"

# Time & Scheduling
chrono = { version = "0.4.43", features = ["serde"] }

# Audio Alerts
rodio = "0.21.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# System Info
whoami = "2.1.0"
dirs = "6.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

